--- a/index.html
+++ b/index.html
@@ -590,12 +590,12 @@
         <!--==================== PORTFOLIO 3 ====================-->
         
         <div class="portfolio__content grid swiper-slide">
-            <img src="assets/img/portfolio3.jpg" alt="" class="portfolio__img">
+            <img src="assets/img/preview.png" alt="" class="portfolio__img">
 
             <div class="portfolio_">
                 <h3 class="portfolio__title">Simple-news blog</h3>
                 <p class="portfolio__description">Website in django. Final project at the IT Academy</p>
-                <a href="#" class="button button--flex button--small portfolio__button">
+                <a href="https://trainee-django-app.herokuapp.com/" class="button button--flex button--small portfolio__button">
                     GitHub source
                     <i class="uil uil-arrow-right button__icon"></i>
                 </a>
