--- a/index.html
+++ b/index.html
@@ -611,7 +611,7 @@
                     <h3 class="portfolio__title">It-academy homework</h3>
                     <p class="portfolio__description">here i post code which reviewed by my mentor</p>
                     <a href="https://github.com/Rc561U/Portfolio-projects/tree/main/It_academy_homework" class="button button--flex button--small portfolio__button">
-                        GitHub source
+                        Visit website
                         <i class="uil uil-arrow-right button__icon"></i>
                     </a>
                 </div>
